--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=firstproject
 server.port=8081
 server.servlet.encoding.force=true
 spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
