--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.datasource.generate-unique-name=false
 #?? URL ????
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
