--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.6'
 }
 
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
+
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
@@ -19,12 +24,17 @@ repositories {
 
 
 dependencies {
+	//PostgreSQL 사용시
+	runtimeOnly 'org.postgresql:postgresql'
+	//h2로 변경시
+	//runtimeOnly 'com.h2database:h2'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'com.h2database:h2'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
