--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,27 @@ spring.application.name=firstproject
 
 server.port=8081
 server.servlet.encoding.force=true
-spring.h2.console.enabled=true
+
 spring.jpa.defer-datasource-initialization=true
-#JPA ?? ??
-#??? ??? ?? ??
 logging.level.org.hibernate.SQL=DEBUG
-#?? ?????
 spring.jpa.properties.hibernate.format_sql=true
-#???? ? ????
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#DB URL ??
-#??? URL ???? ??
 spring.datasource.generate-unique-name=false
-#?? URL ????
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.data=classpath:/data.sql
+spring.datasource.initialization-mode=never
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#h2 ???
+#spring.datasource.url=jdbc:h2:mem:testdb #?? url ??
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.h2.console.enabled=true
+
+#PostgreSQL ???
+spring.datasource.url=jdbc:postgresql://localhost:5432/springboot3_db
+spring.datasource.username=postgres
+spring.datasource.password=ska123
+
+
